--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,8 @@
 @charset "UTF-8";
 
 @use "./base";
-@use "./page/sample";
+@use "./page/mv";
+@use "./page/sec-1";
+@use "./page/sec-2";
+@use "./page/sec-3";
+@use "./page/sec-4";
