--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,371 @@
-@charset "UTF-8";
+img {
+  width: 100%;
+}
+
+a {
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+
+a:hover {
+  opacity: 0.7;
+}
+
+.inner {
+  width: 100%;
+  max-width: calc(1280px + 5rem);
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+@media screen and (max-width: 767px) {
+  .inner {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+}
+
+.only-sp {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .only-sp {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .only-pc {
+    display: none;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+#em240508arai .mv {
+  padding-bottom: 4.1rem;
+}
+#em240508arai .mv__inner {
+  padding-left: 12.1rem;
+}
+#em240508arai .mv__video video {
+  width: 100%;
+  height: auto;
+}
+#em240508arai .mv__text {
+  margin-top: -7.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  gap: 4.9rem;
+}
+#em240508arai .mv__text_emmi {
+  max-width: 41.9rem;
+  width: 100%;
+  padding-bottom: 0.2rem;
+}
+#em240508arai .mv__text_summer {
+  max-width: 34.3rem;
+  width: 100%;
+}
+
+#em240508arai .sec-1 {
+  margin-top: 33.4rem;
+  background: #555555;
+  position: relative;
+}
+#em240508arai .sec-1__inner {
+  padding-top: 86.07rem;
+  padding-bottom: 56.7rem;
+  padding-left: 11rem;
+  padding-right: 11rem;
+  width: 100%;
+  max-width: calc(1280px + 5rem);
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+@media screen and (max-width: 767px) {
+  #em240508arai .sec-1__inner {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+}
+#em240508arai .sec-1__contents {
+  padding-top: 7.73rem;
+  padding-bottom: 7rem;
+  padding-left: 3.41rem;
+  padding-right: 18.6rem;
+}
+#em240508arai .sec-1__main_image {
+  max-width: 69.4rem;
+}
+#em240508arai .sec-1__image-top {
+  position: absolute;
+  left: 0;
+  top: -13.7rem;
+  max-width: 114rem;
+}
+#em240508arai .sec-1__image-middel {
+  position: absolute;
+  right: 0;
+  top: 71.8rem;
+  max-width: 51.3rem;
+}
+#em240508arai .sec-1__image-bottom {
+  position: absolute;
+  bottom: -56.5rem;
+  left: calc(50% + 3.8rem);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  max-width: 62rem;
+  width: 100%;
+}
+
+#em240508arai .sec-2 {
+  margin-top: 90.3rem;
+}
+#em240508arai .sec-2__inner {
+  width: 100%;
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+@media screen and (max-width: 767px) {
+  #em240508arai .sec-2__inner {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+}
+#em240508arai .sec-2__top-images_flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.8rem;
+}
+#em240508arai .sec-2__top-image {
+  max-width: 56.8rem;
+  width: 100%;
+}
+#em240508arai .sec-2__top-image_bottom {
+  margin-top: 7.9rem;
+  margin-left: auto;
+  max-width: 60.5rem;
+}
+#em240508arai .sec-2__second {
+  position: relative;
+  margin-top: 30.9rem;
+  margin-left: auto;
+  max-width: 96.2rem;
+}
+#em240508arai .sec-2__second-text {
+  position: absolute;
+  top: -41.9rem;
+  left: -5.9rem;
+}
+#em240508arai .sec-2__third {
+  margin-top: 12.6rem;
+  overflow-x: clip;
+}
+#em240508arai .sec-2__third-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3.2rem;
+  width: 100%;
+  margin-left: 0;
+}
+@media screen and (max-width: 1400px) {
+  #em240508arai .sec-2__third-flex {
+    width: 109.453125vw;
+    margin-left: -7.9rem;
+  }
+}
+#em240508arai .sec-2__third-image-top {
+  max-width: 73.7rem;
+  width: 100%;
+}
+#em240508arai .sec-2__third-image-middel {
+  max-width: 63.2rem;
+  width: 100%;
+  padding-top: 55.3rem;
+}
+#em240508arai .sec-2__third-contents {
+  margin-top: 5.3rem;
+  margin-left: auto;
+  max-width: 98.8rem;
+  position: relative;
+}
+#em240508arai .sec-2__third-text {
+  max-width: 55.5rem;
+  left: -16.44rem;
+  top: -3.78rem;
+}
+#em240508arai .sec-2__fourth {
+  max-width: 57.8rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 24.9rem;
+  -webkit-transform: translateX(4.8rem);
+          transform: translateX(4.8rem);
+}
+
+#em240508arai .sec-3 {
+  margin-top: 24.1rem;
+  background: #555555;
+  position: relative;
+}
+#em240508arai .sec-3__inner {
+  width: 100%;
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-top: 52.9rem;
+  padding-bottom: 143.2rem;
+}
+@media screen and (max-width: 767px) {
+  #em240508arai .sec-3__inner {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+}
+#em240508arai .sec-3__images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 4rem;
+  padding-right: 5.4rem;
+}
+#em240508arai .sec-3__image {
+  max-width: 59.3rem;
+  width: 100%;
+}
+#em240508arai .sec-3__bottom-contents {
+  bottom: -38.6rem;
+  right: 5.1rem;
+  max-width: 95.3rem;
+  padding-top: 11.9rem;
+  position: absolute;
+}
+#em240508arai .sec-3__bottom-circle {
+  position: absolute;
+  right: 2.4rem;
+  top: 0;
+  max-width: 24.2rem;
+}
+
+#em240508arai .sec-4 {
+  margin-top: 46.6rem;
+}
+#em240508arai .sec-4__inner {
+  width: 100%;
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+@media screen and (max-width: 767px) {
+  #em240508arai .sec-4__inner {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+}
+#em240508arai .sec-4__first-contents {
+  position: relative;
+  max-width: 95rem;
+  margin-left: -4.1rem;
+}
+#em240508arai .sec-4__first-text {
+  position: absolute;
+  top: 2.32rem;
+  left: 37.32rem;
+}
+#em240508arai .sec-4__first-text-top {
+  max-width: 26.67rem;
+}
+#em240508arai .sec-4__first-text-center {
+  max-width: 28.902rem;
+  margin-top: 8rem;
+}
+#em240508arai .sec-4__first-text-bottom {
+  max-width: 26.076rem;
+  margin-top: 8rem;
+}
+#em240508arai .sec-4__second {
+  margin-top: 21.4rem;
+  position: relative;
+}
+#em240508arai .sec-4__second-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3.8rem;
+}
+#em240508arai .sec-4__second-image {
+  max-width: 62.1rem;
+  width: 100%;
+}
+#em240508arai .sec-4__second-image_left {
+  padding-top: 55.6rem;
+}
+#em240508arai .sec-4__second-image_right {
+  -webkit-transform: translateX(0.8rem);
+          transform: translateX(0.8rem);
+}
+#em240508arai .sec-4__second-text {
+  position: absolute;
+  max-width: 97.4rem;
+  top: calc(50% - 7rem);
+  left: calc(50% + 1rem);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+#em240508arai .sec-4__third {
+  margin-top: 33.1rem;
+  overflow-x: clip;
+}
+#em240508arai .sec-4__third-top_images {
+  margin-top: 4.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+  max-width: 152.4rem;
+  width: 119.0625vw;
+  margin-left: -5.2rem;
+}
+#em240508arai .sec-4__third-left_image,
+#em240508arai .sec-4__third-right_image {
+  max-width: 75.2rem;
+  width: 100%;
+}
+#em240508arai .sec-4__third-middel_image {
+  margin-top: 26.3rem;
+}
+#em240508arai .sec-4__third-middel_image-2 {
+  margin-top: 18.7rem;
+  margin-left: auto;
+  max-width: 75.2rem;
+}
+#em240508arai .sec-4__third-bottom_image {
+  margin-top: 47.5rem;
+  max-width: 57.9rem;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transform: translateX(0.05rem);
+          transform: translateX(0.05rem);
+}
