--- a/scss/global/_function.scss
+++ b/scss/global/_function.scss
@@ -40,11 +40,10 @@ $light : 300;
 $color-black: #000;
 $color-white: #fff;
 $color-theme: #003566;
-$color-red: #6F4C4C;
-$color-bg_gray: #F5F7F7;
-$color-main_gray: #7E7C7C;
+$color-bg_black: #555555;
+$color-bg_gray: #E6E6E6;
 
-$inner: 1000px;
+$inner: 1280px;
 
 $padding-pc: rem(25);
 $padding-sp: rem(15);
