--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,9 @@
 @use "./page/sec-2";
 @use "./page/sec-3";
 @use "./page/sec-4";
+@use "./page/sec-5";
+@use "./page/sec-6";
+@use "./page/sec-7";
+@use "./page/sec-8";
+@use "./page/sec-9";
+@use "./page/short_video";
