--- a/scss/page/_sec-1.scss
+++ b/scss/page/_sec-1.scss
@@ -4,10 +4,13 @@
         margin-top: rem(334);
         background: $color-bg_black;
         position: relative;
+        @include mq(md) {
+            margin-top: vw(268);
+        }
     }
     .sec-1__inner {
         padding-top: rem(860.7);
-        padding-bottom: rem(567);
+        padding-bottom: rem(597);
         padding-left: rem(110);
         padding-right: rem(110);
         width: 100%;
@@ -25,15 +28,30 @@
         padding-bottom: rem(70);
         padding-left: rem(34.1);
         padding-right: rem(186);
+        @include mq(md) {
+            padding-top: vw(468);
+            padding-bottom: vw(136);
+            padding-left: vw(65);
+            padding-right: vw(66);
+        }
     }
     .sec-1__main_image {
         max-width:rem(694);
+        @include mq(md) {
+            max-width: vw(259);
+        }
     }
     .sec-1__image-top {
         position: absolute;
         left: 0;
         top: rem(-137);
         max-width:rem(1140);
+        @include mq(md) {
+            display: none;
+            top: vw(-199);
+            width: calc(485 / 324 * 100vw);
+            max-width: vw(485);
+        }
     }
     .sec-1__image-middel {
         position: absolute;
@@ -48,5 +66,51 @@
         transform: translateX(-50%);
         max-width:rem(620);
         width: 100%;
+    }
+    .sec-1__image_contents {
+        position: relative;
+    }
+    .sec-1__text-top {
+        position: absolute;
+        max-width:rem(512);
+        left: rem(29.6);
+        top: rem(-77.1);
+        @include mq(md) {
+            max-width: vw(160);
+            left: vw(47.8);
+            top: vw(-20.4);
+        }
+    }
+    .sec-1__text-left {
+        position: absolute;
+        max-width:rem(256.32);
+        left: rem(-34.1);
+        top: calc(50% + rem(22));
+        transform: translateY(-50%);
+        @include mq(md) {
+            max-width: vw(80.1);
+            left: vw(-19.6);
+            top: calc(50% + vw(22));
+        }
+    }
+    .sec-1__text-bottom {
+        position: absolute;
+        max-width:rem(573.76);
+        right: rem(-39);
+        bottom: rem(-70);
+        @include mq(md) {
+            max-width: vw(179.3);
+            right: vw(23.1);
+            bottom: vw(31.8);
+        }
+    }
+    .sec-1__slide {
+        @include mq(md) {
+            position: absolute;
+            z-index: -1;
+            top: vw(157);
+            right: 0;
+            max-width: vw(307);
+        }
     }
 }
