--- a/scss/page/_sec-4.scss
+++ b/scss/page/_sec-4.scss
@@ -3,7 +3,7 @@
     .sec-4 {
         margin-top: rem(466);
         @include mq(md) {
-            margin-right: vw(281);
+            margin-top: vw(281);
         }
     }
     .sec-4__inner {
@@ -30,13 +30,24 @@
         }
     }
     .sec-4__first-text-top {
+        width:rem(266.7);
+    }
+    .sec-4__first-text-top_container {
         max-width:rem(266.7);
+        width: 100%;
     }
     .sec-4__first-text-center {
+        width:rem(289.02);
+    }
+    .sec-4__first-text-center_container {
         max-width:rem(289.02);
         margin-top: rem(80);
+        width: 100%;
     }
     .sec-4__first-text-bottom {
+        width:rem(260.76);
+    }
+    .sec-4__first-text-bottom_container {
         max-width:rem(260.76);
         margin-top: rem(80);
     }
@@ -51,8 +62,9 @@
         display: flex;
         gap: rem(38);
         @include mq(md) {
-            flex-direction: column;
+            flex-direction: column-reverse;
             gap: vw(39);
+            overflow-x: clip;
         }
     }
     .sec-4__second-image {
@@ -83,10 +95,10 @@
         left: calc(50% + rem(10)) ;
         transform: translate(-50%,-50%);
         @include mq(md) {
-            max-width:vw(389.6);
+            max-width:vw(58.5);
             top: auto;
-            bottom: vw(130.8);
-            left: calc(50% + rem(10)) ;
+            bottom: vw(-131.7);
+            left: calc(50% + vw(76.3)) ;
             transform: translateX(-50%);
         }
     }
@@ -94,12 +106,14 @@
         margin-top: rem(331);
         overflow-x: clip;
         @include mq(md) {
-            margin-top: vw(257);
+            margin-top: vw(257.5);
         }
     }
     .sec-4__third-swiper_contents {
         @include mq(md) {
-            width: 100%;
+            max-width:rem(393);
+            width: calc(393 / 390 * 100vw);
+            margin-left: vw(-1);
         }
     }
     .sec-4__third-top_images {
@@ -109,6 +123,9 @@
         max-width:rem(1524);
         width: calc(1524 / 1280 * 100vw);
         margin-left: rem(-52);
+        @include mq(md) {
+            display: none;
+        }
     }
     .sec-4__third-left_image,
     .sec-4__third-right_image {
@@ -146,7 +163,7 @@
         @include mq(md) {
             margin-top: vw(189.1);
             max-width:vw(331.88);
-            transform: translateX(vw(0.5));
+            transform: translateX(vw(-1));
         }
     }
 }
