--- a/scss/page/_sec-1.scss
+++ b/scss/page/_sec-1.scss
@@ -5,7 +5,9 @@
         background: $color-bg_black;
         position: relative;
         @include mq(md) {
-            margin-top: vw(268);
+            margin-top: vw(329.3);
+            overflow-x: clip;
+            z-index: -1;
         }
     }
     .sec-1__inner {
@@ -19,8 +21,10 @@
         margin-left: auto;
         box-sizing: border-box;
         @include mq(md) {
-            padding-right: $padding-sp;
-            padding-left: $padding-sp;
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 0;
+            padding-right: 0;
         }
     }
     .sec-1__contents {
@@ -47,7 +51,6 @@
         top: rem(-137);
         max-width:rem(1140);
         @include mq(md) {
-            display: none;
             top: vw(-199);
             width: calc(485 / 324 * 100vw);
             max-width: vw(485);
@@ -88,9 +91,9 @@
         top: calc(50% + rem(22));
         transform: translateY(-50%);
         @include mq(md) {
-            max-width: vw(80.1);
+            max-width: vw(36);
             left: vw(-19.6);
-            top: calc(50% + vw(22));
+            top: calc(50% + vw(13));
         }
     }
     .sec-1__text-bottom {
@@ -101,7 +104,7 @@
         @include mq(md) {
             max-width: vw(179.3);
             right: vw(23.1);
-            bottom: vw(31.8);
+            bottom: vw(-31.8);
         }
     }
     .sec-1__slide {
