--- a/scss/page/_sec-3.scss
+++ b/scss/page/_sec-3.scss
@@ -31,8 +31,9 @@
     }
     .sec-3__swiper {
         @include mq(md) {
-            max-width:vw(330.68);
+            max-width:vw(330.6);
             margin-left: auto;
+            margin-right: vw(5.7);
         }
     }
     .sec-3__image {
@@ -63,5 +64,8 @@
             right: 0;
             max-width:vw(169);
         }
+    }
+    .sec-3__bottom-circle video {
+        mix-blend-mode: multiply;
     }
 }
