--- a/scss/page/_sec-6.scss
+++ b/scss/page/_sec-6.scss
@@ -2,6 +2,9 @@
 #em240508arai {
     .sec-6 {
         margin-top: rem(263);
+        @include mq(md) {
+            margin-top: vw(81.5);
+        }
     }
     .sec-6__inner {
         width: 100%;
@@ -9,10 +12,6 @@
         margin-right: auto;
         margin-left: auto;
         box-sizing: border-box;
-        @include mq(md) {
-            padding-right: $padding-sp;
-            padding-left: $padding-sp;
-        }
     }
     .sec-6__top_text {
         max-width:rem(1107.5);
@@ -21,16 +20,26 @@
         position: relative;
         z-index: 1;
         transform: translateX(rem(-1));
+        @include mq(md) {
+            max-width:vw(332.25);
+        }
     }
     .sec-6__first_image {
         max-width:rem(819);
         margin-right: auto;
         margin-top: rem(-320.5);
+        @include mq(md) {
+            max-width:vw(332);
+            margin-top: vw(-91.2);
+        }
     }
     .sec-6__second-images {
         display: flex;
         gap: rem(46);
         margin-top: rem(133);
+        @include mq(md) {
+            display: none;
+        }
     }
     .sec-6__second-left_image {
         max-width:rem(508);
@@ -41,11 +50,22 @@
         max-width:rem(726);
         width: 100%;
     }
+    .sec-6__swiper_contents {
+        @include mq(md) {
+            margin-top: vw(-121.2);
+            max-width:vw(237);
+            margin-left: auto;
+        }
+    }
     .sec-6__bottom_text {
+        width:rem(550);
+    }
+    .sec-6__bottom_text_container {
         margin-top: rem(473);
         max-width:rem(550);
         margin-left: auto;
         margin-right: auto;
         transform: translateX(rem(28));
+        width: 100%;
     }
 }
