--- a/scss/page/_sec-8.scss
+++ b/scss/page/_sec-8.scss
@@ -2,6 +2,9 @@
 #em240508arai {
     .sec-8 {
         margin-top: rem(275);
+        @include mq(md) {
+            margin-top:vw(163);
+        }
     }
     .sec-8__inner {
         width: 100%;
@@ -9,33 +12,80 @@
         margin-right: auto;
         margin-left: auto;
         box-sizing: border-box;
-        @include mq(md) {
-            padding-right: $padding-sp;
-            padding-left: $padding-sp;
-        }
     }
     .sec-8__top-texts {
         padding-left: rem(113.5);
         position: relative;
         z-index: 1;
+        @include mq(md) {
+            padding-left: vw(34);
+        }
     }
     .sec-8__top-first_text {
+        width:rem(241.87);
+        @include mq(md) {
+            width:vw(145.12);
+        }
+    }
+    .sec-8__top-first_text_container {
         max-width:rem(241.87);
+        width: 100%;
+        @include mq(md) {
+            max-width:vw(145.12);
+        }
+
     }
     .sec-8__top-second_text {
+        width:rem(184.75);
+        @include mq(md) {
+            width:vw(110.85);
+        }
+    }
+    .sec-8__top-second_text_container {
         max-width:rem(184.75);
         margin-top: rem(78.9);
         margin-left: rem(324);
+        width: 100%;
+        @include mq(md) {
+            max-width:vw(110.85);
+            margin-left: vw(128);
+            margin-top: vw(40.1);
+        }
     }
     .sec-8__top-third_text {
+        width:rem(313.25);
+        @include mq(md) {
+            width:vw(187.95);
+        }
+    }
+    .sec-8__top-third_text_container {
         max-width:rem(313.25);
         margin-top: rem(69.9);
         margin-left: rem(96);
+        width: 100%;
+        @include mq(md) {
+            max-width:vw(187.95);
+            margin-left: vw(10);
+            margin-top: vw(34.1);
+        }    
     }
     .sec-8__top-fourth_text {
+        width:rem(180);
+        @include mq(md) {
+            width:vw(108);
+        }
+    }
+    .sec-8__top-fourth_text_container {
         max-width:rem(180);
         margin-top: rem(86.9);
         margin-left: rem(187);
+        width: 100%;
+        @include mq(md) {
+            max-width:vw(108);
+            margin-left: vw(68);
+            margin-top: vw(49.1);
+        }
+
     }
     .sec-8__top-images {
         background: $color-bg_black;
@@ -43,24 +93,45 @@
         padding-bottom: rem(967);
         position: relative;
         margin-top: rem(112.5);
+        @include mq(md) {
+            padding-top: vw(466);
+            padding-bottom: vw(210.7);
+            padding-left: vw(14);
+            padding-right: vw(15.7);
+            margin-top: vw(101.1);
+        }
     }
     .sec-8__top-first_image {
         position: absolute;
         max-width:rem(853);
         right: 0;
         top: rem(-234.5);
+        @include mq(md) {
+            max-width:vw(334);
+            top: vw(-73);
+        }
     }
     .sec-8__top_second-flex {
         display: flex;
         gap: rem(17);
         justify-content: center;
+        @include mq(md) {
+            gap: 0;
+        }
     }
     .sec-8__top_second-image {
         max-width:rem(455);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(180.14);
+        }
     }
     .sec-8__bottom-contents {
         margin-top: rem(-400);
+        @include mq(md) {
+            margin-top: vw(-13.4);
+            overflow-x:clip ;
+        }
     }
     .sec-8__bottom-first_image {
         max-width:rem(1200);
@@ -74,39 +145,83 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        @include mq(md) {
+            margin-top: vw(79.4);
+            padding-left: vw(29);
+        }
+    }
+    .sec-8__bottom-lines--pc {
+        @include mq(md) {
+            display: none;
+        }
+    }
+    .sec-8__bottom-lines--sp {
+        display: none;
+        @include mq(md) {
+            display: flex;
+        }
     }
     .sec-8__bottom-line {
         display: inline-block;
         background: $color-theme;
         height: rem(12);
+        @include mq(md) {
+            height: vw(5);
+        }
     }
     .sec-8__bottom-line + .sec-8__bottom-line {
         margin-top: rem(26);
+        @include mq(md) {
+            margin-top: vw(11);
+        }
     }
     .sec-8__bottom-line:nth-child(1) {
         max-width:rem(462);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(194);
+        }
     }
     .sec-8__bottom-line:nth-child(2) {
         max-width:rem(545);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(229);
+        }
     }
     .sec-8__bottom-line:nth-child(3) {
         max-width:rem(328);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(138);
+        }
     }
     .sec-8__bottom-images {
         margin-top: rem(341);
         display: flex;
         gap: rem(40);
+        @include mq(md) {
+            gap: vw(10);
+            margin-top: vw(24);
+            max-width:vw(506);
+            width: calc(506 / 390 * 100vw);
+            margin-left: vw(-26);
+        }
     }
     .sec-8__bottom-left_image {
         max-width:rem(763);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(248);
+        }
     }
     .sec-8__bottom-right_image {
         max-width:rem(477);
         width: 100%;
         padding-top: rem(609);
+        @include mq(md) {
+            max-width:vw(248);
+            padding-top: 0;
+        }
     }
 }
