--- a/scss/page/_sec-9.scss
+++ b/scss/page/_sec-9.scss
@@ -5,6 +5,10 @@
         background: $color-bg_black;
         overflow-x: clip;
         margin-bottom: rem(1154);
+        @include mq(md) {
+            margin-top: vw(269);
+            margin-bottom: vw(350);
+        }
     }
     .sec-9__inner {
         width: 100%;
@@ -16,8 +20,8 @@
         padding-bottom: rem(784);
         box-sizing: border-box;
         @include mq(md) {
-            padding-right: $padding-sp;
-            padding-left: $padding-sp;
+            padding-top: vw(288);
+            padding-bottom: vw(262);
         }
     }
     .sec-9__first_image {
@@ -25,56 +29,118 @@
         position: absolute;
         left: rem(95.3);
         top: rem(-387.7);
+        @include mq(md) {
+            left: vw(29);
+            top: vw(-199);
+            max-width:vw(253.27);
+        }
     }
     .sec-9__second_image {
         max-width:rem(572);
         margin-left: auto;
         margin-right: auto;
+        @include mq(md) {
+            max-width:vw(331.88);
+        }
     }
     .sec-9__third-images {
         max-width: rem(1360);
         width: calc(1360 / 1280 * 100vw);
         margin-top: rem(468);
+        @include mq(md) {
+            width: 100%;
+            overflow-x: clip;
+            margin-top: vw(167);
+        }
+    }
+    .sec-9__third-top_image {
+        @include mq(md) {
+            max-width:vw(474.3);
+            width: calc(474.3 / 390 * 100vw);
+            margin-left: vw(-1);
+        }
     }
     .sec-9__third-flex {
         display: flex;
         justify-content: end;
         margin-top: rem(97);
         padding-right: rem(28);
+        @include mq(md) {
+            margin-top: vw(51);
+            padding-right: 0;
+            margin-right: vw(-2);
+        }
     }
     .sec-9__third-left_image ,
     .sec-9__third-right_image {
         max-width:rem(598);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(181.9);
+        }
     }
     .sec-9__fourth-contents {
         margin-top: rem(386.5);
+        @include mq(md) {
+            margin-top: vw(72.9);
+            overflow-x: clip;
+        }
     }
     .sec-9__fourth-text {
+        width:rem(255.2);
+        @include mq(md) {
+            width:vw(127.6);
+        }
+    }
+    .sec-9__fourth-text_container {
         max-width:rem(255.2);
         margin-left: auto;
         margin-right: auto;
         transform: translateX(rem(21));
+        width: 100%;
+        @include mq(md) {
+            max-width:vw(127.6);
+            transform: translateX(vw(6));
+        }
     }
     .sec-9__fourth-top_image {
         max-width:rem(1032);
         margin-right: auto;
         margin-top: rem(293.7);
+        @include mq(md) {
+            margin-top: vw(60.9);
+            max-width:vw(336);
+        }
     }
     .sec-9__fourth-flex {
         margin-top: rem(233);
         display: flex;
         gap: rem(25);
+        @include mq(md) {
+            gap: 0;
+            margin-top: vw(76);
+            max-width:vw(484);
+            width: calc(484 / 390 * 100vw);
+        }
     }
     .sec-9__fourth-right_image,
     .sec-9__fourth-left_image {
         max-width:rem(593);
         width: 100%;
+        @include mq(md) {
+            max-width:vw(242);
+        }
     }
     .sec-9__fourth-bottom_image {
         max-width:rem(798);
         position: absolute;
         bottom: rem(-599);
         right: rem(69);
+        width: 100%;
+        @include mq(md) {
+            bottom: vw(-158.2);
+            right: vw(-3.2);
+            max-width:vw(260.4);
+        }
     }
 }
