--- a/scss/page/_sec-3.scss
+++ b/scss/page/_sec-3.scss
@@ -16,6 +16,9 @@
         box-sizing: border-box;
         padding-top: rem(529);
         padding-bottom: rem(1432);
+        position: relative;
+        z-index: 1;
+        background: $color-bg_black;
         @include mq(md) {
             padding-top: vw(83);
             padding-bottom: vw(503.8);
@@ -49,6 +52,7 @@
         @include mq(md) {
             padding-top: vw(80);
             max-width:vw(388);
+            width: 100%;
             padding-right:vw(41.4);
             right: auto;
             left: vw(-21);
@@ -60,12 +64,16 @@
         right: rem(24);
         top: 0;
         max-width:rem(242);
+        background:transparent;
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
+        z-index: 1;
         @include mq(md) {
             right: 0;
             max-width:vw(169);
         }
     }
     .sec-3__bottom-circle video {
-        mix-blend-mode: multiply;
+        background: transparent;
     }
 }
