--- a/scss/page/_mv.scss
+++ b/scss/page/_mv.scss
@@ -1,7 +1,8 @@
 @use "../global" as *;
 #em240508arai {
     .mv {
-        padding-bottom: rem(41);
+        padding-bottom: rem(0);
+        overflow-x: clip;
         @include mq(md) {
             padding-bottom: 0;
         }
@@ -18,6 +19,8 @@
         @include mq(md) {
             position: relative;
             overflow: clip;
+            width: 100%;
+            margin-left: 0;
         }
     }
     .mv__video::after {
@@ -36,7 +39,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
-            height: 100%;
+            height: auto;
         }
     }
     .mv__text {
@@ -44,13 +47,14 @@
         display: flex;
         align-items: flex-end;
         gap: rem(49);
+        position: relative;
+        z-index: 1;
         @include mq(md) {
             margin-top: vw(0);
             flex-direction: column;
             align-items: center;
             gap: vw(24);
             padding-right: vw(12);
-            position: relative;
         }
     }
     .mv__text_emmi {
