--- a/scss/page/_sec-2.scss
+++ b/scss/page/_sec-2.scss
@@ -57,11 +57,73 @@
         position: absolute;
         top: rem(-416);
         left: rem(-59);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
+        z-index: 1;
+        max-width: rem(265.9);
+        @media screen and (max-width:1021px) {
+            left: 0;
+        }
         @include mq(md) {
-            max-width:vw(82.36);
+            max-width:vw(90);
             top: vw(-134.1);
-            left: calc(50% + vw(19));
+            left: calc(50% + vw(20.5));
             transform: translateX(-50%);
+        }
+    }
+    .sec-2__second-text-01_container {
+        max-width:rem(114.1);
+        @include mq(md) {
+            max-width:vw(45.64);
+        }
+    }
+    .sec-2__second-text-01 {
+        width:rem(114.1);
+        @include mq(md) {
+            width:vw(45.64);
+        }
+    }
+    .sec-2__second-text-02_container {
+        max-width:rem(265.4);
+        margin-top: rem(104.2);
+        @include mq(md) {
+            max-width:vw(90);
+            margin-top: vw(25.7);
+        }
+    }
+    .sec-2__second-text-02 {
+        width:rem(205.4);
+        @include mq(md) {
+            width:vw(82.16);
+        }
+    }
+    .sec-2__second-text-03_container {
+        max-width:rem(133.6);
+        margin-top: rem(97.3);
+        @include mq(md) {
+            max-width:vw(53.44);
+            margin-top: vw(22.5);
+        }
+    }
+    .sec-2__second-text-03 {
+        width:rem(133.6);
+        @include mq(md) {
+            width:vw(53.44);
+        }
+    }
+    .sec-2__second-text-04_container {
+        max-width:rem(120.9);
+        margin-top: rem(119.2);
+        @include mq(md) {
+            max-width:vw(48.36);
+            margin-top: vw(31.7);
+            margin-left: vw(1);
+        }
+    }
+    .sec-2__second-text-04 {
+        width:rem(120.9);
+        @include mq(md) {
+            width:vw(48.36);
         }
     }
     .sec-2__second-image {
@@ -122,6 +184,12 @@
         left: rem(-164.4);
         top: rem(-37.8);
         width: 100%;
+        z-index: 1;
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
+        @media screen and (max-width:1153px) {
+            left: 0;
+        }
         @include mq(md) {
             max-width:vw(222.28);
             top: auto;
@@ -132,15 +200,8 @@
     }
     .sec-2__third-text {
         width:rem(555);
-        // position: absolute;
-        // left: rem(-164.4);
-        // top: rem(-37.8);
-        // width: 100%;
         @include mq(md) {
             width:vw(222.28);
-            // top: auto;
-            // bottom: vw(-17.6);
-            // left: vw(43);
         }
     }
     .sec-2__fourth {
