--- a/scss/page/_sec-4.scss
+++ b/scss/page/_sec-4.scss
@@ -8,6 +8,7 @@
     }
     .sec-4__inner {
         width: 100%;
+        overflow-x: clip;
         max-width: calc($inner);
         margin-right: auto;
         margin-left: auto;
@@ -25,12 +26,17 @@
         position: absolute;
         top: rem(23.2);
         left: rem(373.2);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
+        z-index: 1;
         @include mq(md) {
             display: none;
         }
     }
     .sec-4__first-text-top {
         width:rem(266.7);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
     }
     .sec-4__first-text-top_container {
         max-width:rem(266.7);
@@ -38,6 +44,8 @@
     }
     .sec-4__first-text-center {
         width:rem(289.02);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
     }
     .sec-4__first-text-center_container {
         max-width:rem(289.02);
@@ -46,6 +54,8 @@
     }
     .sec-4__first-text-bottom {
         width:rem(260.76);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
     }
     .sec-4__first-text-bottom_container {
         max-width:rem(260.76);
@@ -61,6 +71,7 @@
     .sec-4__second-flex {
         display: flex;
         gap: rem(38);
+        overflow-x: clip;
         @include mq(md) {
             flex-direction: column-reverse;
             gap: vw(39);
@@ -88,20 +99,26 @@
             align-self: flex-end;
         }
     }
-    .sec-4__second-text {
+    .sec-4__second-text_container {
         position: absolute;
-        max-width:rem(974);
+        max-width:rem(144.4);
+        width: 100%;
+        max-height: rem(974);
         top: calc(50% - rem(70));
         left: calc(50% + rem(10)) ;
         transform: translate(-50%,-50%);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
         @include mq(md) {
             max-width:vw(58.5);
+            max-height: vw(390);
             top: auto;
             bottom: vw(-131.7);
             left: calc(50% + vw(76.3)) ;
             transform: translateX(-50%);
         }
     }
+
     .sec-4__third {
         margin-top: rem(331);
         overflow-x: clip;
@@ -111,7 +128,6 @@
     }
     .sec-4__third-swiper_contents {
         @include mq(md) {
-            max-width:rem(393);
             width: calc(393 / 390 * 100vw);
             margin-left: vw(-1);
         }
