--- a/scss/page/_sec-8.scss
+++ b/scss/page/_sec-8.scss
@@ -23,6 +23,8 @@
     }
     .sec-8__top-first_text {
         width:rem(241.87);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
         @include mq(md) {
             width:vw(145.12);
         }
@@ -37,6 +39,8 @@
     }
     .sec-8__top-second_text {
         width:rem(184.75);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
         @include mq(md) {
             width:vw(110.85);
         }
@@ -54,6 +58,8 @@
     }
     .sec-8__top-third_text {
         width:rem(313.25);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
         @include mq(md) {
             width:vw(187.95);
         }
@@ -71,6 +77,8 @@
     }
     .sec-8__top-fourth_text {
         width:rem(180);
+        mix-blend-mode: multiply;
+        -webkit-mix-blend-mode: multiply;
         @include mq(md) {
             width:vw(108);
         }
@@ -89,16 +97,23 @@
     }
     .sec-8__top-images {
         background: $color-bg_black;
+        margin-top: rem(112.5);
+        width: 100vw;
+        max-width: 100vw;
+        margin-left: calc(50% - 50vw);
+        @include mq(md) {
+            margin-top: vw(101.1);
+        }
+    }
+    .sec-8__top-images_inner {
         padding-top: rem(1209);
         padding-bottom: rem(967);
         position: relative;
-        margin-top: rem(112.5);
         @include mq(md) {
             padding-top: vw(466);
             padding-bottom: vw(210.7);
             padding-left: vw(14);
             padding-right: vw(15.7);
-            margin-top: vw(101.1);
         }
     }
     .sec-8__top-first_image {
